Faz envio dos arquivos para o s3 e adiciona o sequelize

--- a/module-26-AWS-express/s3-express/views/index.ejs
+++ b/module-26-AWS-express/s3-express/views/index.ejs
@@ -10,5 +10,18 @@
       <input type="file" name="file" id="" />
       <input type="submit" value="Enviar" />
     </form>
+
+    <hr />
+
+    <table>
+      <% arquivos.forEach(arquivo => { %>
+      <tr>
+        <td><%-arquivo.name%></td>
+        <td>
+          <a href="/ver/<%-arquivo.id%>">Ver arquivo</a>
+        </td>
+      </tr>
+      <% }) %>
+    </table>
   </body>
 </html>
